--- a/U6_Ejer1_Productos_API_REST/src/main/resources/application.properties
+++ b/U6_Ejer1_Productos_API_REST/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=U6_Ejer1_Productos_API_REST
+
+# Configuración de la conexión con MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.username=tu_usuario
+spring.datasource.password=tu_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración con JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
