ej8ficheros_repaso_centrotierra

--- a/U6_Ej2_API_Cursos/src/main/resources/application.properties
+++ b/U6_Ej2_API_Cursos/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=U6_Ej2_API_Cursos
+
+# Configuración de la conexión con Postgresql
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:6543/postgres?user=postgres.bugddivkdtkvmgrhlice&password=torretasroot
+spring.datasource.username=postgres
+spring.datasource.password=torretasroot
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración con JPA/Hibernate
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
