--- a/U6_Ej3_APIREST_Libreria/src/main/resources/application.properties
+++ b/U6_Ej3_APIREST_Libreria/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=API REST Libreria
+
+# Configuración de la conexión con PostgreSQL
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.bugddivkdtkvmgrhlice
+spring.datasource.password=torretasroot
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración con JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
